# cpp_practice

TheModernCppChallange/chapter1/p1/: main  main.cpp
TheModernCppChallange/chapter1/p2/: main  main.cpp
TheModernCppChallange/chapter1/p3/: main  main.cpp
template_multithread/: CMakeLists.txt  conanfile.py
template_multithread/include/: ExampleJob.hpp  ExternalEventProvider.hpp  Job.hpp  StateMachine.hpp
template_multithread/src/: main.cpp
